added style what you do section

--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
   <section class="hero">
 
 <!-- "what we do" section -->
+<section id="what-we-do" class="intro">
 <section>
   <h2>What We Do</h2>
   <p>
@@ -45,9 +46,12 @@
   </p>
 </section>
 
+
 <!-- "what you do" section -->
+
 <section>
   <h2>What You Do</h2> 
+  <section id="what-you-do" class="steps">
 
 <div>
   <!-- insert this img element -->
@@ -56,6 +60,19 @@
   <p>You're already here, so why not?</p>
 </div>
 
+
+<section id="what-we-do" class="intro">
+  <h2 class="section-title primary-border">What We Do</h2>
+  ...
+</section>
+
+<section id="what-you-do" class="steps">
+  <h2 class="section-title secondary-border">What You Do</h2>
+  ...
+</section>
+
+
+<h3>Step 1: <span>Fill Out the Form Above.</span></h3>
 
 
 
